Minor fixes
Hide question nav scrollbar, change csv file name, change pathing after unenrolling student

--- a/TestingApp/app/static/css/style.css
+++ b/TestingApp/app/static/css/style.css
@@ -559,6 +559,11 @@ input:not(:focus):valid + .floating-label {
     top: 100px; */
 }
 
+.question-nav::-webkit-scrollbar{
+    display: none;  /* Chrome, Safari, Edge, Opera */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 .nav-pills {
     display: block;
     color: #FFFFFF;
